--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.CopyBtnForJira {
+.copy-btn-for-jira {
     background-color: rgb(0, 82, 204);
     color: white;
     text-align: center;
@@ -13,16 +13,12 @@
     display: inline-block;
     margin-left:10px;
     cursor: pointer;
+    height: 30px;
+    margin: 10px 10px 0 0;
+    padding: 4px 10px;
   }
 
-  .CopyBtnForJira:hover
+  .copy-btn-for-jira:hover
   {
     background: rgb(7, 71, 166);
-  }
-
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
   }
